# kimi-swarm

./: .gitignore  MAIN_SPEC.md  README.md  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile  Dockerfile.minimal  README.md  build.sh
docs/: SERVICE.md
docs/service/launchd/: com.ambient.swarm.plist
docs/service/systemd/: ambient-swarm@.service
scripts/: get_version.py  lock.sh
src/: __init__.py
src/ambient/: __init__.py  approval.py  cli.py  config.py  coordinator.py  cross_pollination.py  impact.py  kimi_client.py  risk.py  status.py  types.py  workspace.py  worktrees.py
src/ambient/agents/: __init__.py  base.py  performance_optimizer.py  refactor_architect.py  security_guardian.py  style_enforcer.py  test_enhancer.py
src/ambient/salvaged/: __init__.py  git_ops.py  redaction.py  repo_pack.py  safe_paths.py  sandbox.py  telemetry.py
tests/: __init__.py  conftest.py  live_test.sh
tests/fixtures/test_repo/: README.md  main.py  pyproject.toml  test_main.py
tests/integration/: __init__.py  test_end_to_end.py  test_full_pipeline.py
tests/scenarios/: test_edge_cases.py
tests/unit/: test_agents.py  test_approval.py  test_config.py  test_cross_pollination.py  test_git_ops.py  test_impact.py  test_kimi_client.py  test_monitoring.py  test_repo_pack.py  test_risk.py  test_safe_paths.py  test_sandbox.py  test_status.py  test_types.py  test_workspace.py  test_worktrees.py
